fixed modal z-index bugs

--- a/src/components/dashboard-modal/dashboard-modal.styles.scss
+++ b/src/components/dashboard-modal/dashboard-modal.styles.scss
@@ -48,7 +48,7 @@
 	left: 0;
 	background: rgba(0, 0, 0, 0);
 	visibility: hidden;
-	z-index: 100;
+	z-index: 300;
 	transition: 0.5;
 	height: 100%;
 	width: 100%;
