--- a/src/components/dashboard-user/dashboard-user.styles.scss
+++ b/src/components/dashboard-user/dashboard-user.styles.scss
@@ -5,7 +5,7 @@
 	margin: -20px 20px;
 	padding: 30px 14px;
 	position: relative;
-	z-index: 50;
+	z-index: 200;
 	margin-bottom: 20px;
 
 	.profile-name {
